[package]
name = "config"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache 2.0"

[lib]
doctest = false

[dependencies]
base64 = "0.21"
boa_engine = "0.16.0"
derivative = "2.2.0"
derive_more = "0.99.17"
ether = { path = "../either" }
futures = "0.3"
http = "0.2"
itertools = "0.10"
# pinned to 0.2.3 because newer versions made a semver incompatible change by making `Node` no longer
# public, which we depend on https://github.com/freestrings/jsonpath/issues/36
jsonpath_lib = "=0.2.3"
once_cell = "1.17.1"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
rand = "0.8"
regex = "1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
unicode-segmentation = "1"
yaml-rust = "0.4"
zip_all = { path = "../zip_all" }
js-sys = "0.3"
log = "0.4"

[dev-dependencies]
maplit = "1"
test_common = { path = "../test_common" }
tokio = "1"
